# StracTakeHome

./: .gitignore  README.md  auth_service.py  auth_service_factory.py  authenticator.py  command.py  credentials.json  drive_operations.py  drive_service.py  file_controller.py  file_manager_gui.py  main.py  operations.py  pyproject.toml  token.json
integrationtests/: file_manager_integration.py
unittests/: test_auth_service.py  test_auth_service_factory.py  test_command.py  test_drive_service.py  test_file_controller.py  test_file_manager_gui.py
