[tool.poetry]
name = "my_project_package"
version = "0.1.0"
description = "My Python project"
authors = ["Rahul Kumar <rahulxkumar13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
google-api-python-client = "^2.147.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"